--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10357,3 +10357,24 @@ POR_pillar_of_democracy_desc:0 ""
 # Tooltips
 
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
+
+
+#Finnland
+if_law_passes_tt: "§YIf the law passes:§!"
+FIN_establish_ilmavoimat: "Estabilish Ilmavoimat"
+FIN_purchase_foreign_aircraft: "Purchase Foreign Aircraft"
+FIN_purchase_foreign_aircraft_tt: "§YUnlocks decisions§! to purchase §Yplanes and licenses for planes§! from foreign powers"
+FIN_our_own_designs: "Our Own Designs"
+FIN_valtion_lentokonetehdas: "Ilmailuvoimien Lentokonetehdas"
+FIN_french_aviation_advisors: "French Aviation Advisors"
+FIN_british_aviation_plan: "Invite British Aviation Advisors"
+FIN_german_aviation_advisors: "German Aviation Advisors"
+FIN_sea_planes: "Continue With Seaplanes"
+FIN_sea_planes_and_planes_with_wheals: "Balanced Approach"
+FIN_planes_with_wheals: "Change to Ground Based Airplanes"
+FIN_prioritise_bombers: "Prioritise Bombers"
+FIN_prioritise_fighters: "Prioritise Fighters"
+FIN_pilot_school: "Found a Pilot School"
+FIN_expand_old_russian_airbases: "Repair and Expand Old Russian Airfields"
+FIN_ground_bases: "Prioritise Ground Bases"
+FIN_sea_plane_bases: "Prioritise Seaplane Stations"
