--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2183,6 +2183,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_tax_collection_in_middle_east_desc:0 "Centuries of neglection has left tax collection in [FROM.GetName] rather inefficient. If we manage to bring modern means of transportation to the region, we can easily improve tax collection methods."
  TUR_increase_conscription_in_middle_east:0 "Increase Conscription in [FROM.GetName]"
  TUR_increase_conscription_in_middle_east_desc:0 "Our inability to fully reach out to and integrate [FROM.GetName] has resulted in inefficient recruitment of the population for the army. If we manage to extend our reach to these territories, we can increase the amount of men we can recruit."
+ TUR_tax_collection_from_hejazi_tribes:0 "Tax Collection from [FROM.GetName] Tribes"
+ TUR_tax_collection_from_hejazi_tribes_desc:0 "Tribes in [FROM.GetName] has long experienced a lack of central state authority. We have to force tribes to pay their taxes as in the rest of our vilayets."
+ TUR_abolish_slavery_in_hejaz:0 "Abolish Slavery in Hejaz"
+ TUR_abolish_slavery_in_hejaz_desc:0 "The question of slavery in the vilayet of Hejaz has always been a sensitive topic regarding our central state. As our government has granted equality to all its citizens under the second constitution, we have to abolish slavery in Hejaz."
+ TUR_abolish_slavery_in_yemen:0 "Abolish Slavery in Yemen"
+ TUR_abolish_slavery_in_yemen_desc:0 "The question of slavery in the vilayet of Yemen has always been a sensitive topic regarding our central state. As our government has granted equality to all its citizens under the second constitution, we have to abolish slavery in Yemen."
  TUR_surpress_arab_dissent:0 "Surpress Arab Dissent"
  TUR_surpress_arab_dissent_desc:0 "Our Arab population in [FROM.GetName] has proven to be quite unsatisfied with our rule. In order to protect the integrity of the state, we must purge the territory from any dissent it has under it."
  TUR_ban_arab_newspapers:0 "Ban Arab Newspapers in the Vilayer of [FROM.GetName]"
