--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -663,12 +663,42 @@
  #TURKEY
  TUR_second_constitutional_era:0 "Second Constitutional Era"
  TUR_second_constitutional_era_desc:0 "The restoration of the constitution in 1908 has paved the way for the reformation of the empire. Yet the guarantee of a pluralist system and the illusion of freedom and stability it brought is at stakes. As different political factions fight for influence in the empire, it's uncertain whether the constitution will keep its promises of the guarantee of freedom, or will take a repressive turn just like the very system it sought the dissolve."
+ TUR_expanded_intelligence_service:0 "Expanded Intelligence Service"
+ TUR_expanded_intelligence_service_desc:0 "As Second Bureau has been officially recognized as an offical branch within the government, we can resume our intelligence services with greater capabilities."
  TUR_increased_customs_taxes:0 "Increased Customs Taxes"
  TUR_increased_customs_taxes_desc:0 "İbrahim Hakkı Paşa has managed to have successful discussions with the British and incrase our customs tax from 11% to 15%. This will help us with the growth of our economy."
  TUR_growing_liberal_opposition:0 "Growing Liberal Opposition"
  TUR_growing_liberal_opposition_desc:0 "Ever since the foundation of the Hürriyet ve İtilaf Fırkası, a democratic and liberal upheal has surrounded the country. With many minorities and those who got sick of the İttihadist regime started overwhelmingly supporting the İtilafists. As this is causing a havoc among the İttihadist lines, the popularity of the opposition continues to grow."
  TUR_cabinet_crisis:0 "Cabinet Crisis"
  TUR_cabinet_crisis_desc:0 "Recent resignation of İbrahim Hakkı Paşa has led to the creation of a new government led by Mehmet Said Paşa. Yet this cabinet is plagued by inexperienced politicians and an ever-growing opposition. Untill the formation of a new parliament, either the formation of a new parliament, either through elections or other means, ineffective governance will hinder our abilities."
+ TUR_tax_collection:0 "Tax Collection"
+ TUR_tax_collection_desc:0 "Intensified tax collection in the state has increased the overall revenue of our treasury and our state."
+ TUR_tax_collection_tt:0 "Effects for controller:\nConsumer Goods Factories: §Y-1.0%§!\n"
+ TUR_tax_collection_dm:0 "Tax Collection"
+ TUR_tax_collection_dm_desc:0 "Intensified tax collection in the state has increased the overall revenue of our treasury and our state."
+ TUR_armenian_minority:0 "£ww1_flag_ARM  §YArmenian Minority§!"
+ TUR_armenian_minority_desc:0 "This state is home to many minorities, especially Armenians. As a result, the state suffers from difficulties with defending this territory and increased supply capabilities for the enemy among other things."
+ TUR_arab_minority:0 "£ww1_flag_ARB  §YArab Minority§!"
+ TUR_arab_minority_desc:0 "This state is home to many minorities, especially Arabs. As a result, the state suffers from supply difficulties and lack of construction capabilities among other things."
+ TUR_greek_minority:0 "£ww1_game_rule_flag_GRE  §YGreek Minority§!"
+ TUR_greek_minority_desc:0 "This state is home to many minorities, especially Greeks. As a result, the state suffers from lack of cooperative property and increased intel for the enemy while increased construction capabilities among other things."
+ TUR_south_slavic_minority:0 "£ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!"
+ TUR_south_slavic_minority_desc:0 "This state is home to many minorities, especially South Slavs. As a result, the state suffers from extra need for garrisons and harder time with surpressing rebellions among other things."
+ TUR_albanian_minority:0 "£ww1_flag_ALB  §YAlbanian Minority§!"
+ TUR_albanian_minority_desc:0 "This state is home to many minorities, especially Albanians. As a result, the state suffers from increased intensity of rebellions among other things."
+ TUR_kurdish_minority:0 "£ww1_flag_KUR  §YKurdish Minority§!"
+ TUR_kurdish_minority_desc:0 "This state is home to many minorities, especially Kurds. As a result, the state suffers from lack of usable resources and reduced available recruitable manpower among other things."
+ TUR_assyrian_minority:0 "£ww1_flag_ASY  §YAssyrian Minority§!"
+ TUR_assyrian_minority_desc:0 "":0 "This state is home to many minorities, especially Assyrians. As a result, the state suffers from lack of usable land and construction capabilities among other things."
+ TUR_georgian_minority:0 "£ww1_flag_GEO  §YGeorgian Minority§!"
+ TUR_georgian_minority_desc:0 "This state is home to many minorities, especially Georgians. As a result, the state suffers from lack of cooperative property and increased supply capabilities for the enemy among other things."
+ TUR_romanian_minority:0 "£ww1_flag_ROM  §YRomanian Minority§!"
+ TUR_romanian_minority_desc:0 "This state is home to many minorities, especially Romanians. As a result, the state suffers from increased sabotage of properties and reduced overall opinion among other things."
+ TUR_turkish_minority:0 "£ww1_flag_TUR  §YTurkish Minority§!"
+ TUR_turkish_minority_desc:0 "This state is home to many minorities, especially Turks. As a result, the state suffers from lack of usable land and general hostility among other things."
+ TUR_azerbaijani_cooperation:0 "£ww1_flag_AZR  Azerbaijani Cooperation"
+ TUR_azerbaijani_cooperation_desc:0 "Among all the minorities, this state is populated mostly by Azerbaijanis. This results in an overall increased opinion of us by the locals and gives us an easier time with ruling these lands."
+ TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
 
  TUR_economic_etatism:0 "Etatism"
  TUR_economic_etatism_desc:0 "It seems that foreign investments and liberal open market economy has only increased our foreign dependency. From now on, our empire needs to introduce strict means to control its economy."
@@ -934,42 +964,30 @@
  TUR_islamic_army_tt:0 "When at war with a §YMajor Power§!: \nWeekly Manpower: §G+150§! \nAttack against major countries: §G+15.0%§! \nDefense against major countries: §G+15.0%§ \n"
  TUR_ottoman_staff:0 "Ottoman Staff"
  TUR_german_military_command:0 "German Military Command"
- TUR_armenian_minority:0 "£ww1_flag_ARM  §YArmenian Minority§!"
- TUR_arab_minority:0 "£ww1_flag_ARB  §YArab Minority§!"
- TUR_greek_minority:0 "£ww1_game_rule_flag_GRE  §YGreek Minority§!"
- TUR_south_slavic_minority:0 "£ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!"
- TUR_albanian_minority:0 "£ww1_flag_ALB  §YAlbanian Minority§!"
- TUR_kurdish_minority:0 "£ww1_flag_KUR  §YKurdish Minority§!"
- TUR_georgian_minority:0 "£ww1_flag_GEO  §YGeorgian Minority§!"
- TUR_romanian_minority:0 "£ww1_flag_ROM  §YRomanian Minority§!"
- TUR_assyrian_minority:0 "£ww1_flag_ASY  §YAssyrian Minority§!"
- TUR_turkish_minority:0 "£ww1_flag_TUR  §YTurkish Minority§!"
- TUR_azerbaijani_cooperation:0 "£ww1_flag_AZR  Azerbaijani Cooperation"
- TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
- TUR_minority_supply_tt:0 "[TUR_minority_supply_tt]"
  TUR_gendarmerie:0 "Ottoman Gendarmerie"
  TUR_gendarmerie_improved:0 "Ottoman Gendarmerie"
  TUR_is_not_affected_by_minorities:0 "State is not affected by §YMinorities§!"
- TUR_OPDA:0 "Ottoman Public Debt Administration"
- TUR_OPDA_idea:0 "Ottoman Public Debt"
- TUR_OPDA_idea_desc:0 "After years of foreign domination of our economy, we were finally able to nationalize the Ottoman Public Debt Administration, effectively regaining financial control over our economy with only foreign debts left to pay."
+ TUR_OPDA:0 "£pol_idea Ottoman Public Debt Administration"
+ TUR_OPDA_idea:0 "Ottoman Public Debt Administration"
+ TUR_OPD_idea:0 "Ottoman Public Debt"
+ TUR_OPD_idea_desc:0 "After years of foreign domination of our economy, we were finally able to nationalize the Ottoman Public Debt Administration, effectively regaining financial control over our economy with only foreign debts left to pay."
  TUR_ottoman_credit_national_bank:0 "Ottoman Credit National Bank"
  TUR_ottoman_credit_national_bank_desc:0 "Among mostly foreign owned or controlled bank, Osmanlı İtibar-ı Milli Bankası stands as the first national bank that's working for the interests of our nation."
- TUR_OPDA_foreign_power:0 "Ottoman Public Debt Administration"
- TUR_OPDA_TOOLTIP1:0 "Daily Political Power Cost: §R+0.05§!\nConsumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\nImprove relations maintain cost: §G-10%§!\nResources to Market: §Y+20%§!\nCivilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
- TUR_OPDA_TOOLTIP2:0 "Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\nImprove relations maintain cost: §G-10%§!\nResources to Market: §Y+20%§!\nCivilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
- TUR_OPDA_TOOLTIP3:0 "Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\nImprove relations maintain cost: §G-5%§!\nResources to Market: §Y+20%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
- TUR_OPDA_TOOLTIP4:0 "Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\nImprove relations maintain cost: §G-15%§!\nResources to Market: §Y+10%§![FRA_ottoman_debt]\n(§Y[FRA.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![ENG_ottoman_debt]\n(§Y[ENG.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![GER_ottoman_debt]\n(§Y[GER.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![BEL_ottoman_debt]\n(§Y[BEL.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![HOL_ottoman_debt]\n(§Y[HOL.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![ITA_ottoman_debt]\n(§Y[ITA.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![AUH_ottoman_debt]\n(§Y[AUH.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![RUS_ottoman_debt]\n(§Y[RUS.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§![USA_ottoman_debt]\n(§Y[USA.GetNameWithFlag]§!) Target country trade cost: §G-10.00%§!"
- TUR_OPDA_TOOLTIP5:0 "Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\nImprove relations maintain cost: §R+5%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
- FRA_ottoman_debt_yes:0 "\n(§Y[FRA.GetNameWithFlag]§!) Consumer Goods Factories factor: [?FRA.opda_consumer_goods|.1%Y]"
- ENG_ottoman_debt_yes:0 "\n(§Y[ENG.GetNameWithFlag]§!) Consumer Goods Factories factor: [?ENG.opda_consumer_goods|.1%Y]"
- GER_ottoman_debt_yes:0 "\n(§Y[GER.GetNameWithFlag]§!) Consumer Goods Factories factor: [?GER.opda_consumer_goods|.1%Y]"
- BEL_ottoman_debt_yes:0 "\n(§Y[BEL.GetNameWithFlag]§!) Consumer Goods Factories factor: [?BEL.opda_consumer_goods|.1%Y]"
- HOL_ottoman_debt_yes:0 "\n(§Y[HOL.GetNameWithFlag]§!) Consumer Goods Factories factor: [?HOL.opda_consumer_goods|.1%Y]"
- ITA_ottoman_debt_yes:0 "\n(§Y[ITA.GetNameWithFlag]§!) Consumer Goods Factories factor: [?ITA.opda_consumer_goods|.1%Y]"
- AUH_ottoman_debt_yes:0 "\n(§Y[AUH.GetNameWithFlag]§!) Consumer Goods Factories factor: [?AUH.opda_consumer_goods|.1%Y]"
- RUS_ottoman_debt_yes:0 "\n(§Y[RUS.GetNameWithFlag]§!) Consumer Goods Factories factor: [?RUS.opda_consumer_goods|.1%Y]"
- USA_ottoman_debt_yes:0 "\n(§Y[USA.GetNameWithFlag]§!) Consumer Goods Factories factor: [?USA.opda_consumer_goods|.1%Y]"
+ TUR_OPDA_foreign_power:0 "£pol_idea Ottoman Public Debt Administration"
+ TUR_OPDA_TOOLTIP1:0 "£political_power_cost_texticon  Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-10%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§!\n£civilian_intel_texticon  Civilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
+ TUR_OPDA_TOOLTIP2:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-10%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§!\n£civilian_intel_texticon  Civilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
+ TUR_OPDA_TOOLTIP3:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-5%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
+ TUR_OPDA_TOOLTIP4:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-15%§!\n£traded_goods_texticon  Resources to Market: §Y+10%§![FRA_ottoman_debt]\n(§Y[FRA.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![ENG_ottoman_debt]\n(§Y[ENG.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![GER_ottoman_debt]\n(§Y[GER.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![BEL_ottoman_debt]\n(§Y[BEL.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![HOL_ottoman_debt]\n(§Y[HOL.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![ITA_ottoman_debt]\n(§Y[ITA.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![AUH_ottoman_debt]\n(§Y[AUH.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![RUS_ottoman_debt]\n(§Y[RUS.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§![USA_ottoman_debt]\n(§Y[USA.GetNameWithFlag]§!) £trade_texticon  Target country trade cost: §G-10.00%§!"
+ TUR_OPDA_TOOLTIP5:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §R+5%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
+ FRA_ottoman_debt_yes:0 "\n(§Y[FRA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?FRA.opda_consumer_goods|.1%Y]"
+ ENG_ottoman_debt_yes:0 "\n(§Y[ENG.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?ENG.opda_consumer_goods|.1%Y]"
+ GER_ottoman_debt_yes:0 "\n(§Y[GER.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?GER.opda_consumer_goods|.1%Y]"
+ BEL_ottoman_debt_yes:0 "\n(§Y[BEL.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?BEL.opda_consumer_goods|.1%Y]"
+ HOL_ottoman_debt_yes:0 "\n(§Y[HOL.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?HOL.opda_consumer_goods|.1%Y]"
+ ITA_ottoman_debt_yes:0 "\n(§Y[ITA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?ITA.opda_consumer_goods|.1%Y]"
+ AUH_ottoman_debt_yes:0 "\n(§Y[AUH.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?AUH.opda_consumer_goods|.1%Y]"
+ RUS_ottoman_debt_yes:0 "\n(§Y[RUS.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods|.1%Y]"
+ USA_ottoman_debt_yes:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods|.1%Y]"
  TUR_lucrative_foreign_trade:0 "Lucrative Foreign Trade"
  TUR_lucrative_foreign_trade_desc:0 "Foreign trade in this state has proven to be a great improvement in increasing development."
  TUR_local_development:0 "Local Development"
