--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -120,6 +120,10 @@
  RUS_law_on_polish_zemstvo_passed_in_sc: "Law on Polish Zemstvo was passed in the State Council"
  RUS_law_on_reformation_of_police_sd: "Law on Reformation of Police in the Empire"
  RUS_law_on_reformation_of_police_sc: "Law on Reformation of Police in the Empire"
+ RUS_law_on_introduction_of_the_income_tax_sd: "Law on Introduction of the Income Tax"
+ RUS_law_on_introduction_of_the_income_tax_sc: "Law on Introduction of the Income Tax"
+ RUS_law_on_temporary_progressive_taxation_sd: "Law on Temporary Progressive Taxation"
+ RUS_law_on_temporary_progressive_taxation_sc: "Law on Temporary Progressive Taxation"
  RUS_new_conscription_law_sd: "Law on changing the Charter on military service"
  RUS_new_conscription_law_sc: "Law on changing the Charter on military service"
  RUS_grand_fleet_programme_sd: "Baltic Fleet enhanced shipbuilding programme"
@@ -216,6 +220,10 @@
  RUS_jewish_question_desc: "After the Partitions of Poland, besides the majority slavic regions of Belarus and Ukraine, Russia has aquired territories with a sizeable Jewish minority. Ever since then, life of Jewish people in Russia has been pretty hard - restrictions of the government alongside antisemitic pogroms force them to either leave the country or join various revolutionary groups and fight for their rights."
  RUS_authoritarian_zemstvo: "Authoritarian Zemstvo"
  RUS_authoritarian_zemstvo_desc: "Zemstvo is a local government institution, introduced in 1864 during the Great Reforms of Alexander II. In 1890, due to Alexander III's counterreforms, their authority was severely restricted, which makes it easier to control our population, but in turn slows down our development."
+ RUS_drunken_budget: "Drunken Budget"
+ RUS_drunken_budget_desc: ""
+ RUS_income_tax: "Income Tax"
+ RUS_progressive_tax: "Progressive Tax"
  RUS_new_zemstvo: "New Zemstvo"
  RUS_student_protests: "Student Protests"
  RUS_controlled_unions: "Controlled Unions"
@@ -236,6 +244,7 @@
  reformist_prime_minister_scripted_trigger_tt: "§YPrime Minister§! is a §CReformist§!"
  krivoshein_premiership_scripted_trigger_tt: "§Y[RUS_alexander_krivoshein.GetName]§! is §YPrime Minister§!"
  stolypin_premiership_scripted_trigger_tt: "§Y[RUS_pyotr_stolypin.GetName]§! is §YPrime Minister§!"
+ reformist_minister_of_finance_scripted_trigger_tt: "§YMinister of Finance§! is a §CReformist§!"
 
  # National Focuses
  RUS_stolypins_reforms: "Stolypin's Reforms"
@@ -249,7 +258,15 @@
  RUS_grand_fleet_programme: "Grand Fleet Programme"
  RUS_new_conscription_law: "New Conscription Law"
  RUS_sway_the_election: "Sway the Election"
+ RUS_lesser_rearmament_programme: "Lesser Rearmament Programme"
+ RUS_great_army_programme: "Great Army Programme"
+ RUS_censor_liberal_press: "Censor Liberal Press"
+ RUS_put_a_leash_on_okhranka: "Put a Leash on Okhranka"
+ RUS_increase_police_budget: "Increase Police Budget"
  RUS_complete_police_reform: "Complete Police Reform"
+ RUS_anti_alcohol_campaign: "Anti-Alcohol Campaign"
+ RUS_income_tax: "Income Tax"
+ RUS_progressive_taxation: "Progressive Taxation"
  RUS_secular_primary_schooling: "Secular Primary Schooling"
  RUS_higher_primary_schools: "Higher Primary Schools"
  RUS_universal_primary_schooling: "Universal Access to Primary Schooling"
@@ -273,17 +290,19 @@
  RUS_autonomy_for_polish_cities: "Autonomy for Polish Cities"
  RUS_polish_zemstvo: "Introduce Zemstvo in Poland"
  RUS_autonomy_for_poland: "Autonomy for Poland"
+ RUS_abolish_pale_of_settlement: "Emancipation of Jews"
 
 
  # Focus Filters
  FOCUS_FILTER_EDUCATION_REFORM: "Education Reform"
  FOCUS_FILTER_AGRARIAN_REFORM: "Agrarian Reform"
  FOCUS_FILTER_ZEMSTVO_REFORM: "Zemstvo Reform"
+ FOCUS_FILTER_FINANCIAL_REFORM: "Financial Reform"
  FOCUS_FILTER_LABOUR_QUESTION: "Labour Question"
  FOCUS_FILTER_RUSSIFICATION_OF_FINLAND: "Russification of Finland"
  FOCUS_FILTER_AUTONOMY_FOR_POLAND: "Autonomy for Poland"
  FOCUS_FILTER_REACTIONARY_PATH: "Reactionary Path"
- FOCUS_FILTER_STRENGTHEN_TSARS_AUTHORITY: "Tsarist Path"
+ FOCUS_FILTER_STRENGTHEN_TSARS_AUTHORITY: "Conservative Path"
  FOCUS_FILTER_REFORMIST_PATH: "Reformist Path"
 
  # Events
@@ -424,6 +443,7 @@
 
  RUS_far_right_law_tt: "\nThis is a $party_4_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
  RUS_center_right_law_tt: "\nThis is a $party_3_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_centrist_law_tt: "\nThis is a §3Centrist§! law, meaning it favours reformist elements from both $party_2_text_rus$ and $party_3_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
  RUS_center_left_law_tt: "\nThis is a $party_2_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
  RUS_socialist_law_tt: "\nThis is a $party_1_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
 
