--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10757,7 +10757,7 @@ FRA_leave_MOR:0 "Leave Morocco"
  ww1_finland.11.t: "Restoration of the Grand Duchy of Finland"
  ww1_finland.11.d: "The Grand Duchy of Finland was officially established in 1809 after Russia conquered Finland from Sweden in the Finnish War. Since it's establishment the duchy had been very autonomic compared to other Russian controlled areas. But even though the duchy has never officially ceased to exist it was de-facto integrated into Russia in 1910. But now when the Tsar has abdicated and the laws passed after the February Manifesto have been reverted, the Finnish autonomy has been restored."
  ww1_finland.11.a: "Hopefully they will stay loyal in the future too"
- ww1_finland.11.b: "Finally! (Play as Finland)"
+ ww1_finland.11.b: "Finally! (Play as [FIN.GetFlag]Finland)"
  ww1_finland.12.t: "Queston of the composition of the Senate"
  ww1_finland.12.d: "Queston of the composition of the Senate"
  ww1_finland.12.a: "The socialists and capitalists form the government together"
@@ -10779,41 +10779,41 @@ FRA_leave_MOR:0 "Leave Morocco"
  ww1_finland.23.d: "After learning the identity behind the alias v.G. diplomats from France, Italy, Poland, Germany and the Baltics have demanded actions from our government. \n\nEven though the officer who wrote the article, Paul Von Gerich is not in active service he is still the commander of the Helsinki White Guard District and according to the diplomats he should therefore be punished for his inappropriate behavior."
  ww1_finland.23.a: "We should fire von Gerich"
  ww1_finland.23.b: "He can stay if he promises to apologise"
- ww1_finland.33.t: "Tragedy over the Alps"
- ww1_finland.33.d: "Today a telegraph from Zürich came to our ministry for foreign affairs notifying us that three of airmen have died in two plane accidents over Switzerland. These two tragic accidents happended when two pilots from our air force were flying two recently purchased Italian Savoia S.9 seaplanes from Italy to Finland. Among the pilots there were one more Finnish airman and an Italian mechanic on board. \n\nAccording to the Swiss officials one of the planes was seen falling into the Lake Zurich. However there haven't been yet any information regarding the second plane other than that it has gone missing. In their telegraph the Swiss officials also sent us their condolences and promised to deliver the bodies to Finland when they are found."
- ww1_finland.33.a: "Rest in peace!"
- ww1_finland.35.t: "Finnish parliament wants control over their internal affairs"
- ww1_finland.35.d: "After gaining the support of the Finnish parliament a law called Power Act was passed and has now been brought to us to be confirmed. The law states that the highest authority over Finnish internal affairs previously held by the Tsar should be transferred directly to the Finnish parliament. Even thought passing the law would give the highest authority over internal affairs to the Finnish parliament we would still retain the control of their foreign policy and diplomatic relations. The law is clearly aimed to make the country independent and that's why we should consider really carefully our approach towards it."
- ww1_finland.35.a: "Outrageous! The Finnish parliament is clearly unsuitable and therefore should be dismissed"
- ww1_finland.35.b: "NO!"
- ww1_finland.35.c: "Sounds like a good idea"
- ww1_finland.36.t: "[FROM.getName] dismisses our parliament"
- ww1_finland.36.d: ""
- ww1_finland.36.a: ""
- ww1_finland.36.b: ""
- ww1_finland.37.t: "Valtalaki passes"
- ww1_finland.37.d: "[FROM.GetLeader] the leader of [FROM.getName] has approved the law proposal we sent to them which transfer the authority previously held by the Tsar to our parliament. The law will immidiately come into effect granting our parliament greater authority over our internal affairs."
- ww1_finland.37.a: "Thank you [FROM.GetLeader]!"
- ww1_finland.38.t: "Question of the highest authority in Finland"
- ww1_finland.38.desc: ""
- ww1_finland.38.a: "The parliament deserves it the most"
- ww1_finland.38.b: "The senate deserves it the most"
- ww1_finland.38.c: "The Russians should have it atleast for now"
- ww1_finland.38.d: "The Swedes should have it atleast for now"
- ww1_finland.39.t: "German landing in [145.GetName]"
- ww1_finland.39.d: ""
- ww1_finland.39.a: "Nothing to worry about, right?"
- ww1_finland.40.t: "German landing in [145.GetName]"
- ww1_finland.40.d: "The Åland islands are an important archipelago on the Finnish coast from which the Eastern and Northern parts of the Baltic sea can be easily supervised. Because of that keeping them out of our enemies' hands is very important for our Baltic fleet and trade. \n\nAfter the start of the Finnish civil war the Swedes seized the islands with the excuse of protecting the islanders. In reality they wanted to annex the islands to expand their control over the Baltic sea and it's trade. Our military intelligence have suggested that the Swedes had been talking with the Entente and therefore we can't fully trust that they will stay neutral. Because of that our military has decided to secure the strategically important archipelago and now when the Finnish senate has formally asked us to take control of the islands a battalion sized landing unit led by major August Schenck zu Schweinsberg have landed on the town of Eckerö."
- ww1_finland.40.a: "Well done!"
+ ww1_finland.34.t: "Tragedy over the Alps"
+ ww1_finland.34.d: "Today a telegraph from Zürich came to our ministry for foreign affairs notifying us that three of airmen have died in two plane accidents over Switzerland. These two tragic accidents happended when two pilots from our air force were flying two recently purchased Italian Savoia S.9 seaplanes from Italy to Finland. Among the pilots there were one more Finnish airman and an Italian mechanic on board. \n\nAccording to the Swiss officials one of the planes was seen falling into the Lake Zurich. However there haven't been yet any information regarding the second plane other than that it has gone missing. In their telegraph the Swiss officials also sent us their condolences and promised to deliver the bodies to Finland when they are found."
+ ww1_finland.34.a: "Rest in peace!"
+ ww1_finland.36.t: "Finnish parliament wants control over their internal affairs"
+ ww1_finland.36.d: "After gaining the support of the Finnish parliament a law called Power Act was passed and has now been brought to us to be confirmed. The law states that the highest authority over Finnish internal affairs previously held by the Tsar should be transferred directly to the Finnish parliament. Even thought passing the law would give the highest authority over internal affairs to the Finnish parliament we would still retain the control of their foreign policy and diplomatic relations. The law is clearly aimed to make the country independent and that's why we should consider really carefully our approach towards it."
+ ww1_finland.36.a: "Outrageous! The Finnish parliament is clearly unsuitable and therefore should be dismissed"
+ ww1_finland.36.b: "NO!"
+ ww1_finland.36.c: "Sounds like a good idea"
+ ww1_finland.37.t: "[FROM.getName] dismisses our parliament"
+ ww1_finland.37.d: ""
+ ww1_finland.37.a: ""
+ ww1_finland.37.b: ""
+ ww1_finland.38.t: "Valtalaki passes"
+ ww1_finland.38.d: "[FROM.GetLeader] the leader of [FROM.getName] has approved the law proposal we sent to them which transfer the authority previously held by the Tsar to our parliament. The law will immidiately come into effect granting our parliament greater authority over our internal affairs."
+ ww1_finland.38.a: "Thank you [FROM.GetLeader]!"
+ ww1_finland.39.t: "Question of the highest authority in Finland"
+ ww1_finland.39.desc: ""
+ ww1_finland.39.a: "The parliament deserves it the most"
+ ww1_finland.39.b: "The senate deserves it the most"
+ ww1_finland.39.c: "The Russians should have it atleast for now"
+ ww1_finland.39.d: "The Swedes should have it atleast for now"
+ ww1_finland.30.t: "German landing in [145.GetName]"
+ ww1_finland.30.d: ""
+ ww1_finland.30.a: "Nothing to worry about, right?"
  ww1_finland.41.t: "German landing in [145.GetName]"
- ww1_finland.41.d: ""
- ww1_finland.41.a: "Thank you Germany!"
- ww1_finland.42.t: "Choosing the Target for our landing"
- ww1_finland.42.d: "Now when we have secured the archipelago of [145.GetName] we can finally prepare for our main landing on the Finnish coast. But before the Ostsee-Division can land we should choose the final landing destination. For the destination we have three possible choises. \n\nThe first option out of the three is the harbour of Pori called Mäntyluoto. Mäntyluoto has the best quality harbour out of the three and it's very close to the current frontline so our forces would be able to quickly link up with the Finnish whites. But landing in Mäntyluoto would also mean that the division would be subjugated to Mannerheim's command which von der Goltz doesn't want himself. Mäntyluoto is also the furthest target and sailing there would be harder because of the mines and ice.\n\nThe second possible target is the coastal town of Rauma. It's also relatively close to the front but a bit further than Mäntyluoto so von der Goltz's division would most likely not be subjugated to Mannerheim's command right away. Rauma would also probably be easier to land in because it's closer so there would be less ice to break.\n\nThe third and final option is Hanko which is another smaller coastal town with a small harbour. While Rauma and Mäntyluoto are relatively close to the front Hanko is far from the front which means that if we choose to land in Hanko von der Goltz would be able to have his own front in the south and not be commanded by Mannerheim. Hanko might also be the best option because it's relatively close to Helsinki the Finnish capital and it's also the nearest to Danzig where the division currently is."
- ww1_finland.42.a: "We should land in Hanko to avoid the ice."
- ww1_finland.42.b: "We should follow the plan and land in Mäntyluoto"
- ww1_finland.42.c: "Rauma is probably the best place for our landing."
+ ww1_finland.41.d: "The Åland islands are an important archipelago on the Finnish coast from which the Eastern and Northern parts of the Baltic sea can be easily supervised. Because of that keeping them out of our enemies' hands is very important for our Baltic fleet and trade. \n\nAfter the start of the Finnish civil war the Swedes seized the islands with the excuse of protecting the islanders. In reality they wanted to annex the islands to expand their control over the Baltic sea and it's trade. Our military intelligence have suggested that the Swedes had been talking with the Entente and therefore we can't fully trust that they will stay neutral. Because of that our military has decided to secure the strategically important archipelago and now when the Finnish senate has formally asked us to take control of the islands a battalion sized landing unit led by major August Schenck zu Schweinsberg have landed on the town of Eckerö."
+ ww1_finland.41.a: "Well done!"
+ ww1_finland.42.t: "German landing in [145.GetName]"
+ ww1_finland.42.d: ""
+ ww1_finland.42.a: "Thank you Germany!"
+ ww1_finland.43.t: "Choosing the Target for our landing"
+ ww1_finland.43.d: "Now when we have secured the archipelago of [145.GetName] we can finally prepare for our main landing on the Finnish coast. But before the Ostsee-Division can land we should choose the final landing destination. For the destination we have three possible choises. \n\nThe first option out of the three is the harbour of Pori called Mäntyluoto. Mäntyluoto has the best quality harbour out of the three and it's very close to the current frontline so our forces would be able to quickly link up with the Finnish whites. But landing in Mäntyluoto would also mean that the division would be subjugated to Mannerheim's command which von der Goltz doesn't want himself. Mäntyluoto is also the furthest target and sailing there would be harder because of the mines and ice.\n\nThe second possible target is the coastal town of Rauma. It's also relatively close to the front but a bit further than Mäntyluoto so von der Goltz's division would most likely not be subjugated to Mannerheim's command right away. Rauma would also probably be easier to land in because it's closer so there would be less ice to break.\n\nThe third and final option is Hanko which is another smaller coastal town with a small harbour. While Rauma and Mäntyluoto are relatively close to the front Hanko is far from the front which means that if we choose to land in Hanko von der Goltz would be able to have his own front in the south and not be commanded by Mannerheim. Hanko might also be the best option because it's relatively close to Helsinki the Finnish capital and it's also the nearest to Danzig where the division currently is."
+ ww1_finland.43.a: "We should land in Hanko to avoid the ice."
+ ww1_finland.43.b: "We should follow the plan and land in Mäntyluoto"
+ ww1_finland.43.c: "Rauma is probably the best place for our landing."
  
  fin_strenghten_whites: "This will strengthen the §CCivil Guards§!"
  fin_weaken_whites: "This will weaken the §CCivil Guards§!"
