--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -128,6 +128,9 @@
  RUS_new_conscription_law_sc: "Law on changing the Charter on military service"
  RUS_grand_fleet_programme_sd: "Baltic Fleet enhanced shipbuilding programme"
  RUS_grand_fleet_programme_sc: "Baltic Fleet enhanced shipbuilding programme"
+ RUS_lesser_rearmament_programme_sd: "Lesser Rearmament Programme"
+ RUS_lesser_rearmament_programme_sc: "Lesser Rearmament Programme"
+ RUS_lesser_rearmament_programme_passed_in_sc: "Lesser Rearmament Programme was passed in the State Council"
  RUS_increase_funding_for_agrarian_reform: "Increase funding for Agrarian Reform"
  RUS_increase_funding_for_education_reform: "Increase funding for Education Reform"
 
