Added Chinese air tech

--- a/localisation/english/ww1_equip_air_l_english .yml
+++ b/localisation/english/ww1_equip_air_l_english .yml
@@ -387,16 +387,29 @@
  GRE_tac_bomber_equipment_3:0 "Airco DH.9" #1919
  GRE_tac_bomber_equipment_3_short:0 "Airco DH.9"
 
+ #TUR - Ottomans
  TUR_fighter_equipment_2:0 "Halberstadt D.II"
  TUR_fighter_equipment_2_short:0 "Halberstadt D.II"
 
  
- #air
+ #BRA - Brazil
  BRA_scout_plane_equipment_1:0 "Morane-Borel Monoplane"
  BRA_scout_plane_equipment_1_short:0 "Morane-Saulnier A"
 
+ #ARR - Argentina
  ARG_scout_plane_equipment_1:0 "Nieuport II" #1910
  ARG_scout_plane_equipment_1_short:0 "Nieuport II"
 
+ #SIA - Siam
  SIA_scout_plane_equipment_1:0 "Nieuport II" #1910
  SIA_scout_plane_equipment_1_short:0 "Nieuport II"
+ 
+ #QIN/CHI = China
+ QIN_scout_plane_equipment_1:0 "Fong Yu. No.2" #1910
+ QIN_scout_plane_equipment_1_short:0 "Fong Yu. No.2"
+ QIN_airship_equipment_1:0 "Airship "China"" #1910
+ QIN_airship_equipment_1_short:0 "China"
+ CHI_scout_plane_equipment_1:0 "Fong Yu. No.2" #1910
+ CHI_scout_plane_equipment_1_short:0 "Fong Yu. No.2"
+ CHI_airship_equipment_1:0 "Airship "China"" #1910
+ CHI_airship_equipment_1_short:0 "China"
