Gunbus for China

--- a/localisation/english/ww1_equip_air_l_english .yml
+++ b/localisation/english/ww1_equip_air_l_english .yml
@@ -409,7 +409,11 @@
  QIN_scout_plane_equipment_1_short:0 "Fong Yu. No.2"
  QIN_airship_equipment_1:0 "Airship "China"" #1910
  QIN_airship_equipment_1_short:0 "China"
+ QIN_fighter_equipment_1:0 "Vickers F.B 5 "Gunbus"" #1915
+ QIN_fighter_equipment_1_short:0 "Vickers F.B 5"
  CHI_scout_plane_equipment_1:0 "Fong Yu. No.2" #1910
  CHI_scout_plane_equipment_1_short:0 "Fong Yu. No.2"
  CHI_airship_equipment_1:0 "Airship "China"" #1910
  CHI_airship_equipment_1_short:0 "China"
+ QIN_fighter_equipment_1:0 "Vickers F.B 5 "Gunbus"" #1915
+ QIN_fighter_equipment_1_short:0 "Vickers F.B 5"
