Why couldn't those retards just add on_bypass?

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -131,6 +131,9 @@
  RUS_lesser_rearmament_programme_sd: "Lesser Rearmament Programme"
  RUS_lesser_rearmament_programme_sc: "Lesser Rearmament Programme"
  RUS_lesser_rearmament_programme_passed_in_sc: "Lesser Rearmament Programme was passed in the State Council"
+ RUS_great_army_programme_sd: "Great Army Programme"
+ RUS_great_army_programme_sc: "Great Army Programme"
+ RUS_great_army_programme_passed_in_sc: "Great Army Programme was passed in the State Council"
  RUS_increase_funding_for_agrarian_reform: "Increase funding for Agrarian Reform"
  RUS_increase_funding_for_education_reform: "Increase funding for Education Reform"
 
