--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1342,10 +1342,12 @@ USA_lucrative_offers_to_companies_desc:0 "The American government has had a hist
   USA_good_neighbor_policy:0 "Good Neighbor Policy"
 this_decision_can_be_taken_5_times:0 "This decision can be taken 5 times"
 company_ventures_1_les:0 "the decision §YFurther Expansion of Business in Latin America§! can be taken §Y1§! less time"
+USA_towards_national_healthcare:0 "Towards a National Healthcare System"
   USA_best_pullout_game_west_of_the_atlantic:0 "Best Pullout Game West of the Atlantic"
 USA_equal_partner_ships:0 "Equal Partnerships"
  ww1_USA.71.a:0 "Certainly not good for the economy"
 ww1_USA.122.t:0 "A Divided Party"
+USA_foster_progressive_revolution:0 "Foster a Progressive Revolution"
 ww1_USA.122.d:0 "Despite being the Republican President, these days you'll be somewhat hard pressed to find an average Republican on the street who enthusiastically supports Taft. Due to Tafts maverick nature, his mishmatch of conservative and progressive policies have left both factions of the party unhappy.\n\nDespite being hackpicked by the leader of the progressive Republicans, Roosevelt, Taft and Roosevelt have became rivals as of late. Starting with the Payne-Aldrich Tariff Act in which Taft raised tariff rates despite promising not to. The Pinchot-Ballinger affair further widened this gap. This scandal was a result of Gifford Pinchot openly challenging Secretary of the Interior Richard Ballingers decisions to allow private development on conserved lands. When Taft sided with Ballinger and dismissed Pinchot, it enraged the progressive wing, who saw it as a direct assault on Roosevelts conservation legacy. Not only was it a betrayal of progressive policies, but there were very serious alligations of corruptions against Richard Ballinger, which although congress's investigation has found to be untrue, remain a common progressive attack on Taft.\n\nMeanwhile, conservatives within the party have also been disenchanted. Taft's vigorous antitrust actions, of which are unprecented by any president in history, have angered the traditionally pro big business wing of the Republican party. Along side this, Conservatives have remained dissapointed at Tafts picks for judges on American courts. Taft has nominated many more progressive thinkers on these courts then conservatives, leading to several loses in courts for conservatives on things like workers rights.\n\nWith both sides not really loving Taft, its clear there will need to be a dramatic shift in policy if there is to be a continuation of his presidency for a second term. Luckily, Taft is pretty flexible in policy, and can easily shift towards the progressives or the conservatives, depending on what benefits him."
 ww1_USA.122.a:0 "We will need to be liked by atleast one of them..."
 USA_gnb.tt:0 "This sub-branch will leave you with a §Rweaker§! §YCompany Ventures in the America's§! national spirit compared to the §YContinue Business in Latin America§! sub-branch, but it is much simpler, and could save §Gsignificantly§! more political power which could be used for other purposes..."
@@ -3948,7 +3950,20 @@ BUL_ui_popularity_header:0 "Influence"
  RUS_ultimatum_to_persia_desc:0 "For a long time has Persia been ravaged by the Constitutional revolution, which also had been detrimental  to our buisness interests and threatened the lives of our citizens in Persia. Some time ago, constitutionalists appointed several american advisors to run Persian economy, which also undermines our influence. It has been concluded, that it's time to restore peace in Persia."
  RUS_for_the_good_of_peasantry_desc:0 "Social reforms will help the peasant population to develop, and we will enlist serious support from the people."
  RUS_fight_for_trade_unions_desc:0 "Trade unions have been semi-legal since the first revolution of 1905. Now the task of our party is to legalize the labor movements and enlist the support of the proletarian class."
+USA_conservation_programs:0 "Conservation Programs"
  RUS_labor_rights:0 "Labor Rights"
+USA_undistributed_profits_tax:0 "Expand Corporate Tax"
+USA_alliance_with_giants:0 "Alliance With Worthy Giants"
+USA_womens_suffrage:0 "Womens Suffrage"
+USA_responsible_government:0 "Responsible Government"
+USA_against_the_corpocracy:0 "Against the Corpocracy"
+USA_vaccination_of_rural_america:0 "Vaccination of Rural America"
+USA_restore_dep_of_commerce_and_labor:0 "Restore the Department of Commerce and Labor"
+USA_strengthen_right_to_strike:0 "Strengthen Right to Strike"
+USA_roll_out_insert_later_fda_reform_here:0 "Empower the FDA"
+ USA_social_insurance:0 "Social Insurance"
+ USA_rural_education_grants:0 "Contest Conservative Control of the Rurals"
+USA_register_lobbyists:0 "Register Lobbyists"
  RUS_labor_rights_desc:0 "Registration of the Labor Code. The strikes will end."
  RUS_crush_the_revolutionaries_movement_desc:0 "The growing strike movement threatens the stability of our nation. We must take decisive action to quell these disturbances, ensuring the maintenance of order and the continuation of industrial productivity essential for our nation's growth and security."
  RUS_unite_poland:0 "Unite the Polish People"
