RAJ Portrait, Events locs, Historical focus UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9292,12 +9292,12 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_raj.16.a:0 "England's need is India's opportunity."
 
  ww1_raj.17.t:0 "Lucknow Pact"
- ww1_raj.17.d:0 "PLACEHOLDER"
+ ww1_raj.17.d:0 "As the fight for greater autonomy continue, both the Congress and the Muslim League have realized that for further concessions to be gained, greater cooperation was required. With Bal Gangadhar Tilak representing the congress, they have now formally reached an agreement between themselves, agreeing to allow representation to religious minorities in the provincial legislatures. With this new alliance comes new demands to the British administration :\n\n1.The number of elected seats on the councils should be increased.\n2.Laws/Motions which were passed by large majorities in the councils should be accepted as bindings by the British Government.\n3.Minorities in the provinces should be protected.\n4.All provinces should be granted autonomy.\n5.Separating the executive from the judiciary.\n6.At least half of the members of the Executive Council being elected, the Legislative council having a majority of elected members."
  ww1_raj.17.a:0 "They're more united against our rule than ever now."
 
  ww1_raj.18.t:0 "Champaran Satyagraha"
  ww1_raj.18.d:0 "PLACEHOLDER"
- ww1_raj.18.a:0 "Abolitish the Tinkathia System"
+ ww1_raj.18.a:0 "Abolish the Tinkathia System"
  ww1_raj.18.b:0 "Supress theses dangerous terrorists."
 
  ww1_raj.19.t:0 "Kheda Satyagraha"
