--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10375,6 +10375,10 @@ RAJ_pursue_the_morley_minto_reforms:0 "Pursue the Morley-Minto Reforms"
 RAJ_pursue_the_morley_minto_reforms_desc:0 "The Morley-Minto Reforms, also known as the Indian Council Acts of 1909, brought much-needed reconciliation with the locals and, although mostly superficial, allowed for greater participation by Indians and Muslims alike at the provincial level. Reaffirming our commitment to the reforms will help to improve our relations with the Indian population, especially since the recent introduction of the Indian Press Act."
 RAJ_george_V_royal_tour:0 "George V Royal Tour"
 RAJ_george_V_royal_tour_desc:0 "With the recent coronation of George V, [RAJ.GetLeader] has expressed his wish to organise the third Delhi Durbar, the Indian imperial-style mass meeting held in Coronation Park, Delhi, to mark the succession of an Emperor or Empress of India. As well as being a symbol of our hold on the subcontinent, the Durbar is commonly used to announce new policies regarding the Raj. As such, organising it will help us set the course."
+RAJ_criminal_tribes_act:0 "Criminal Tribes Act"
+RAJ_criminal_tribes_act_desc:0 ""
+RAJ_indian_factories_act:0 "Indian Factories Act"
+RAJ_indian_factories_act_desc:0 ""
 RAJ_builder_of_the_raj:0 "Builder of the Raj"
 RAJ_builder_of_the_raj_desc:0 "Charles Hardinge has great industrial projects planned for the Raj. From schools to railways, the Viceroy and Governor-General of India will guide the construction of the Raj for years to come, and his name will be remembered for a hundred years, if not more."
 RAJ_placate_the_nationalists:0 "Placate the Nationalists"
@@ -10383,6 +10387,10 @@ RAJ_august_declaration:0 "August Declaration"
 RAJ_august_declaration_desc:0 ""
 RAJ_montagu_chelmsford_reforms:0 "Montagu-Chelmsford Reforms"
 RAJ_montagu_chelmsford_reforms_desc:0 ""
+RAJ_government_of_india_act_1912:0 "Reorganization of Bengal"
+RAJ_government_of_india_act_1912_desc:0 ""
+RAJ_government_of_india_act_1915:0 "Consolidate Indian Laws"
+RAJ_government_of_india_act_1915_desc:0 ""
 RAJ_government_of_india_act:0 "Government of India Act"
 RAJ_government_of_india_act_desc:0 ""
 RAJ_mobilize_the_raj:0 "Mobilize the Raj"
@@ -10393,6 +10401,8 @@ RAJ_exploit_princely_ressources:0 "Exploit Princely Ressources"
 RAJ_exploit_princely_ressources_desc:0 ""
 RAJ_defence_of_india_act:0 "Defence of India Act"
 RAJ_defence_of_india_act_desc:0 ""
+RAJ_ingress_into_india_ordinance:0 "Ingress into India Ordinance"
+RAJ_ingress_into_india_ordinance_desc:0 ""
 RAJ_rowlatt_committee:0 "Rowlatt Committee"
 RAJ_rowlatt_committee_desc:0 ""
 RAJ_rowlatt_act:0 "Rowlatt Act"
