--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10144,7 +10144,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  NWA_glorious_march_to_petrograd_focus_days_tt: "Current days are: [?NWA_glorious_march_to_petrograd_completed_tt:days|Y0]"
 
 # British Raj
-
+RAJ_imperial_bank_of_india_trait:0 "Imperial Bank of India"
 RAJ_simla_convention_relation:0 "Simla Convention"
 RAJ_denounced_us:0 "Denounced us!"
 RAJ_cooperated_with_us:0 "Cooperated with us"
