--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2798,7 +2798,10 @@ proto_fascism_banned:0 "Proto-Fascism Banned"
  AUH_austrian_investments:0 "Austrian Investments"
 
  #British Raj
+RAJ_imperial_bank_of_india_trait:0 "Central Bank"
+RAJ_imperial_bank_of_india_mio:0 "Imperial Bank of India"
  RAJ_national_spirit_remove:0 "§RThis National Spirit will be removed once we're at peace.§!"
+unlock_imperial_bank_of_india.tt:0 "Unlocks §YIndustrial Concern§!: §YImperial Bank of India§!"
 
  RAJ_idea_independence_war:0 "Independence War"
  
