--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2269,7 +2269,18 @@ ww1_chile.43.a:0 "i hope this wont interfere with our saltpeter affairs"
 ww1_chile.44.t:0 "The Nationalist Constitution"
 ww1_chile.44.d:0 "In a momentous triumph for the resilient spirit of the Chilean people, our nation has cast off the shackles of oligarchical oppression and ushered in a new era of democracy and justice with the ratification of our glorious new constitution. After years of enduring the self-serving reign of a corrupt elite, the citizens of Chile have risen, their voices a powerful symphony of freedom and equality. This historic document, crafted by representatives from all corners of our beloved land, embodies the collective will and dreams of our nation, ensuring that power remains in the hands of the people, where it rightfully belongs. The new constitution is not merely a legal framework but a beacon of hope, illuminating the path to a brighter, fairer future for every Chilean family Under this new charter, the principles of liberty, social justice, and national unity are enshrined, guaranteeing that no Chilean will ever again suffer under the yoke of oligarchical exploitation. The institutions of our republic have been reformed to reflect the true democratic spirit, with checks and balances designed to prevent any resurgence of tyranny. Education, healthcare, and labor rights have been fortified, ensuring that every citizen, regardless of background, has the opportunity to thrive. This constitution is a testament to the indomitable will of the Chilean people and a proclamation to the world,Chile has risen, stronger and more united than ever, ready to forge a future of unparalleled prosperity and justice.Figures Like The Fat Fucks Of Juan Luis Sanfuentes And Ramon Barros Luco Are Now A Thing Of The Past"
 ww1_chile.44.a:0 "For A Thousand Years And More"
-
+ww1_chile.45.t:0 "Blacklash From The Catholic Unions"
+ww1_chile.45.d:0 "As Part Of Our Government Programme, we've decide to install state atheism in our country, the best way to get rid of the scourge known as the catholic church,however, the catholic unions, the link between the old gone Partido Conservador And the shitty ass catholic church, didnt like this, unleashing protest all along our territory.Our Advisors Fear This as a sign of a greater problem"
+ww1_chile.45.a:0 "Shoot 'Em"
+ww1_chile.46.t:0 "Chile has begun expelling italians of their country"
+ww1_chile.46.d:0 "As Part Of Their New Nationalistic Government Programme, they've decide to expell all italians of their country, those who have refused have simply been killed, we must embargo them and stop any relationship of any kind we have with them"
+ww1_chile.46.a:0 "Fuck'Em, cut our relations with them and embargo"
+ww1_chile.47.t:0 "The Oligarchy Revolts Against Our Government"
+ww1_chile.47.d:0 "THE OLIGARCHY HAS REVOLVED AND TAKEN CONTROL OF SANTIAGO, BUT WE WILL FIGHT, WE WILL NTO GIVE UP WHAT WE'VE GOTTEN, VIVA CHILE, VIVA EL PARTIDO NACIONALISTA, VIVA LA PATRIA!!!!"
+ww1_chile.47.a:0 "POR LA RAZON O LA FUERZA!!"
+ww1_chile.48.t:0 "The Chilean Civil War"
+ww1_chile.48.d:0 "As Part Of Their New Nationalistic Government Programme, they've stripped the old castillian-basque oligarchy all of their priviliges,not following the santiago accords, in response, the oligarchy has revolted and chile is now involved in a civil war"
+ww1_chile.48.a:0 "Wow"
 
 
 
