--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2278,6 +2278,8 @@ CHL_manpiulate_the_army_tooltip:0 "§ If The Army Ever Tries To Rebel, They Wont
 great_war_protests_flag:0 "Protests Have Erupted Because Of The Great War."
 CHL_recall_old_officers:0 "Recall Old Officers"
 CHL_state_ateismo_tt:0 "§YCareful§Y.§Yyou§Y §Ymight§Y §Yget blacklash§Y §Yfrom§Y §Ythe§Y §YCatholic§Y §9Unions!§Y"
+CHL_fiscalrailways_tt:0 "§YFor this focus yo yake effect you must have asigned the Empresa De Ferrocarriles Del Estado as your Industrial Concern§Y"
+expelling:0 "Expelling A Kind Of "People""
 
  GER_weltpolitik:0 "Weltpolitik"
  GER_weltpolitik_desc:0 "We must enforce our Kaiser's divine right to rule over our Empire. He will lead us and the Empire towards glory!"
