--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2750,6 +2750,11 @@ CHL_autarky_idea:0 "Autarky"
 CHL_convoy_build_efficiency:0 "Merchant Navy"
 CHL_idea_income_tax:0 "Income Tax"
 CHL_nationalized_banks:0 "Nationalized Banks"
+CHL_empresa_ferrocarries_del_estado:0 "Empresa De Ferrocarriles Del Estado"
+CHL_birth_programs_idea:0 "Birth Programmes"
+black_lash_c_chile:0 "Blacklash From The Catholic Unions"
+ARG_italian_inmigration:0 "Italian Inmigration"
+ARG_italian_inmigration_desc:0 "Italian Inmigrants have begun running from chile to our fucking country, they fear for their lives"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
